Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19898

Notepad/Wordpad: Extremely poor performance (freeze) on a 68 KB file

    XMLWordPrintable

Details

    Description

      reactos-bootcd-0.4.16-dev-281-ge3c859e-x86-gcc-lin-dbg

      • Open advapi32_vista.dmp file as attached to this ticket with Notepad or Wordpad
      • Very long to load and render (char by char)
      • Moving the dialog off screen causes a "long freeze"
      • Notepad log shows the following error known from CORE-18944

      err:(dll/win32/comctl32/edit.c:1248) es->text == 0 ... please report 

      • Wordpad log shows the following error ("Symbol of voiced bilabial plosive"), known from CORE-19872 
      • Maybe related to CORE-18590

      (win32ss/gdi/ntgdi/freetype.c:7069) WARNING: WChar 0x0062 has a bitSize.cx of zero 

      Problem does not occurs in Ubuntu Wine 9.22 using ReactOS's Wordpad and the same file

       

       

      Attachments

        Issue Links

          Activity

            People

              katayama_hirofumi_mz Katayama Hirofumi MZ
              KRosUser KRosUser
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated: